--- a/week9/HttpServer.csproj
+++ b/week9/HttpServer.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
+      <PackageReference Include="System.Runtime.Caching" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
